# ai_assistent-students

./: .gitignore  README.md  pyproject.toml
front/: BACKEND_INTEGRATION.md  README.md  SETUP.md  package-lock.json  package.json
front/src/: App.vue
front/src/components/: ChatView.vue  FilesList.vue  ProjectDocuments.vue  Sidebar.vue
front/src/components/profile/: AvatarUpload.vue  CalendarTask.vue  ChatGraph.vue
front/src/config/: api.ts
front/src/router/: index.ts
front/src/services/: api.ts  speech.ts  websocket.ts
front/src/stores/: app.ts
front/src/types/: api.ts  index.ts
front/src/utils/: api.ts  dateTime.ts  storage.ts
front/src/views/: MainView.vue  ProfileView.vue
server/: pyproject.toml  run.sh  test_config.py
server/src/: config-example.yml  config.yml  main.py  models.py
server/src/agent/: chat_agent.py
server/src/agent/tools/: rag_search.py  web_search.py
server/src/config/: Config.py
server/src/endpoints/api/: __init__.py  api.py
server/src/endpoints/models/: document_models.py  models.py
server/src/service/: LLMService.py  QdrantService.py  RerankerService.py  ServiceManager.py  calendar_service.py  context_var.py  document_parser.py  llm_client.py  pdf_processor.py  project_service.py  tavily_search.py  text_vectorizer.py  whisper_service.py  СhunksService.py
server/src/tools/: agent_tools.py  calendar_tools.py  generate_image.py  generate_questions.py  rag_tool.py  summarize_text.py  web_search.py
server/src/utils/: logger.py  prompt_loader.py  prompts.yml
server/transcript/: .env.example  README.md  __init__.py  config.py  database.py  main.py  whisper_client.py
src/service/: tavily_search.py
src/tools/: web_search.py
transcript/: README.md  config.py  openrouter_client.py  whisper_client.py
