[project]
name = "student_assistant"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "uvicorn>=0.35.0",
    "fastapi>=0.116.1",
    "openai>=1.100.2",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "graypy>=2.1.0",
]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
