[project]
name = "student assistant"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chardet>=5.2.0",
    "ebooklib>=0.20",
    "fastapi>=0.116.1",
    "graypy>=2.1.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "lxml>=6.0.2",
    "odfpy>=1.4.1",
    "openai>=1.100.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pyyaml>=6.0.2",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "tavily>=1.1.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
